--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,29 +5,30 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:  # <-- Tambahkan baris ini agar muncul tombol "Run workflow"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r Membangun_model/requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r Membangun_model/requirements.txt
 
-    - name: Run model script
-      run: |
-        python Membangun_model/modelling.py
+      - name: Run model script
+        run: |
+          python Membangun_model/modelling.py
 
-    - name: Run inference check
-      run: |
-        python Monitoring\ dan\ Logging/7.Inference.py
+      - name: Run inference check
+        run: |
+          python Monitoring\ dan\ Logging/7.Inference.py
