--- a/Membangun_model/requirements.txt
+++ b/Membangun_model/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-scikit-learn
-joblib
-prometheus_client
-flask
-mlflow
-dagshub>=0.3.10
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+scipy==1.13.0
+joblib==1.4.0
+mlflow==2.12.1
+dagshub==0.3.23
