--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r Membangun_model/requirements.txt
-          pip install --upgrade dagshub
+          pip install dagshub>=0.3.15
 
       - name: Run automate_Akas.py pipeline
         run: |
