--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,15 @@ jobs:
           pip install -r Membangun_model/requirements.txt
           pip install dagshub==0.3.15
 
+      - name: Run modelling.py (training + log ke MLflow)
+        run: |
+          python Membangun_model/modelling.py
+        env:
+          MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
+          MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
+          MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
+
+
       - name: Run automate_Akas.py pipeline
         run: |
           python preprocessing/automate_Akas.py
