--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Train Model and Log to DagsHub
 on:
   push:
     paths:
-      - 'Membangun_model/**'
+      - 'Membangun_model/**'   # Trigger kalau ada perubahan di folder Membangun_model
   workflow_dispatch:
 
 jobs:
@@ -30,3 +30,9 @@ jobs:
         MLFLOW_TRACKING_USERNAME: ${{ secrets.MLFLOW_TRACKING_USERNAME }}
         MLFLOW_TRACKING_PASSWORD: ${{ secrets.MLFLOW_TRACKING_PASSWORD }}
       run: python Membangun_model/modelling.py
+
+    - name: Upload training artifacts (optional)
+      uses: actions/upload-artifact@v4
+      with:
+        name: training-artifacts
+        path: Membangun_model/Membangun_model/
